// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs integration tests is a snapshot with English localization 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <button
        class="no-underline text-blue-500 hover:text-blue-600 hover:underline active:text-blue-700 transition-colors duration-150"
      >
        <span>
          ...
        </span>
        <span
          class="sr-only"
        >
          expand all links
        </span>
      </button>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          9999
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs integration tests is a snapshot with Russian localization 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/ru"
      >
        <span
          class=""
        >
          Главная Страница
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <button
        class="no-underline text-blue-500 hover:text-blue-600 hover:underline active:text-blue-700 transition-colors duration-150"
      >
        <span>
          ...
        </span>
        <span
          class="sr-only"
        >
          развернуть все ссылки
        </span>
      </button>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          9999
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests a snapshot when all the elements are rendered 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          Movies
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests a snapshot with a truncationWidth of 100 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
        style="max-width: 100px;"
      >
        <span
          class="truncate"
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en/movies"
        style="max-width: 100px;"
      >
        <span
          class="truncate"
        >
          Movies
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
        style="max-width: 100px;"
      >
        <span
          class="truncate"
        >
          9999
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests a snapshot with isNavigation set to true 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en/movies"
      >
        <span
          class=""
        >
          Movies
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          9999
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests is a basic snapshot 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en/movies"
      >
        <span
          class=""
        >
          Movies
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          9999
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests snapshot when the first and last element were rendered 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <button
        class="no-underline text-blue-500 hover:text-blue-600 hover:underline active:text-blue-700 transition-colors duration-150"
      >
        <span>
          ...
        </span>
        <span
          class="sr-only"
        >
          expand all links
        </span>
      </button>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          Seasons
        </span>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs tests snapshot with lastItemLabel 1`] = `
<nav
  aria-label="test-breadcrumbs"
  data-testid="test-breadcrumbs"
>
  <ol
    class="flex items-center flex-wrap gap-y-1"
  >
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en"
      >
        <span
          class=""
        >
          Home Page
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-disabled="false"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 "
        href="/en/movies"
      >
        <span
          class=""
        >
          Movies
        </span>
      </a>
    </li>
    <li
      class="text-100 after:content-[attr(data-separator)] last:after:content-none after:mx-2 after:text-center after:text-100 dark:after:text-dark-neutral-1000 after:text-neutral-1000 transition-colors duration-150 after:transition-colors after:duration-150"
      data-separator="/"
    >
      <a
        aria-current="page"
        aria-disabled="true"
        class="no-underline  hover:underline transition-colors duration-150 text-blue-800 hover:text-blue-900 active:text-blue-1000 dark:text-blue-400 dark:hover:text-blue-300 dark:active:text-blue-200  inline-flex text-200 pointer-events-none"
        href=""
        role="link"
      >
        <span
          class=""
        >
          Star Wars
        </span>
      </a>
    </li>
  </ol>
</nav>
`;
